# baatcheet_chat_rooms

./: .gitignore  Procfile  README.md  requirements.txt
baatcheet/: .env  .gitignore  Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
baatcheet/.ebextension/: db-migrate.config  django.config
baatcheet/.elasticbeanstalk/: config.yml
baatcheet/aws_config_extra/Nginx/: baatcheet
baatcheet/aws_config_extra/gunicorn/: gunicorn.service
baatcheet/aws_config_extra/s3/: bucket_policy  cor_policy
baatcheet/baatcheet/: asgi.py  settings.py  urls.py  wsgi.py
baatcheet/base/: forms.py  models.py  urls.py  views.py
baatcheet/base/api/: urls.py  views.py
baatcheet/base/migrations/: 0001_initial.py  0002_user_bio_user_name_alter_user_email.py  0003_user_avatar.py  0004_alter_user_email.py  0005_auto_20221116_2037.py
baatcheet/base/templates/base/: activity.html  activity_component.html  delete.html  feed_component.html  home.html  (+13 more)
baatcheet/customerusermodel/: db.sqlite3  manage.py
baatcheet/customerusermodel/base/: models.py
baatcheet/customerusermodel/customerusermodel/: asgi.py  settings.py  urls.py  wsgi.py
baatcheet/static/styles/: main.css
baatcheet/templates/: main.html  navigation.html
baatcheet/templates/account/: account_inactive.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
(+2 files in other folders)
