[tool.poetry]
name = "baatcheet"
version = "0.1.0"
description = "Chat room app"
authors = ["zora89 <zorawar.purohit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
python-dotenv = "^0.21.0"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.13.0"
Pillow = "^9.2.0"
psycopg2 = "^2.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
